# nginx-language-server

./: .gitignore  .pylintrc  CHANGELOG.md  Makefile  README.md  mypy.ini  package.json  pyproject.toml
.github/workflows/: release.yaml
nginx_language_server/: __init__.py  cli.py  pygls_utils.py  server.py  utils.py
nginx_language_server/data/: directives.json  directives_document.json  snippets.json  variables.json  variables_document.json
nginx_language_server/parser/: __init__.py  data.py  directives.py  nginxconf.py  utils.py
snippets_src/: README.md  _block_with_parameter.js  block_server.js
utils/: download_hint_data.js
utils/helpers/: checker.js  html.js  http_with_cache.js  io.js  snippet_generator.js
