[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.poetry]
name = "nginx-language-server"
version = "0.8.0"
description = "A language server for nginx.conf"
authors = ["Sam Roeca <samuel.roeca@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/pappasam/nginx-language-server"
repository = "https://github.com/pappasam/nginx-language-server"
keywords = [
  "nginx",
  "completion",
  "refactoring",
  "vim",
  "neovim",
  "lsp",
  "language-server-protocol"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Editors :: Integrated Development Environments (IDE)",
  "Topic :: Utilities",
  "Typing :: Typed"
]
include = ["README.md"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
crossplane = "^0.5.8"
lsprotocol = ">=2022.0.0a10 "
pydantic = "^1.7.3"
pygls = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pylint = ">=2.16.1"
pyright = ">=1.1.292"
black = ">=23.1.0"
docformatter = ">=1.5.1"
isort = ">=5.12.0"

[tool.poetry.scripts]
nginx-language-server = 'nginx_language_server.cli:cli'

[tool.poetry.urls]
Changelog = "https://github.com/pappasam/nginx-language-server/blob/main/CHANGELOG.md"
Issues = "https://github.com/pappasam/nginx-language-server/issues"
