[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.poetry]
name = "nginx-language-server"
version = "0.8.0"
description = "A language server for nginx.conf"
authors = ["Sam Roeca <samuel.roeca@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/pappasam/nginx-language-server"
repository = "https://github.com/pappasam/nginx-language-server"
keywords = [
  "nginx",
  "completion",
  "refactoring",
  "vim",
  "neovim",
  "lsp",
  "language-server-protocol"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Editors :: Integrated Development Environments (IDE)",
  "Topic :: Utilities",
  "Typing :: Typed"
]
include = ["README.md"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
crossplane = "^0.5.8"
lsprotocol = ">=2023.0.1"
pydantic = "^1.10.19"
pygls = "^1.3.1"
typing-extensions = ">=4.12.2 "

[tool.poetry.group.dev.dependencies]
pylint = ">=3.3.3 "
pyright = ">=1.1.392"
black = ">=24.10.0"
docformatter = ">=1.7.5"
isort = ">=5.13.0"

[tool.poetry.scripts]
nginx-language-server = 'nginx_language_server.cli:cli'

[tool.poetry.urls]
Changelog = "https://github.com/pappasam/nginx-language-server/blob/main/CHANGELOG.md"
Issues = "https://github.com/pappasam/nginx-language-server/issues"
